<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:text="@string/nama_lengkap"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/hitam"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_below="@id/textView1" />

    <requestFocus/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/email"
        android:layout_below="@id/editText1"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/hitam"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@id/textView2"
        android:hint="@string/contoh_email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/deskripsi"
        android:layout_below="@id/editText2"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/hitam"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@id/textView3"
        android:layout_marginBottom="36dp"
        android:hint="@string/contoh_desk"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:id="@+id/button1"
        android:layout_below="@id/editText3"/>

</RelativeLayout>